@@ -1,4 +1,4 @@
-use inc::Module::Package 'Ingy:modern 0.08';
+use inc::Module::Package 'Ingy:modern 0.09';
 
 # The default module 'lib/Module/Package.pm' has to be very strict
 # and minimal, so we get much of the package info from here:
