@@ -1,3 +1,5 @@
+=encoding utf8
+
 =head1 NAME
 
 Module::Package::Tutorial - A Hands on Guide
