@@ -5,4 +5,4 @@ BEGIN {
         not(m!\bsite!)
     } @INC;
 }
-use inc::Module::Package 'Ingy:modern 0.08';
+use inc::Module::Package 'Ingy:modern 0.09';
